# mocin

./: Makefile.am  configure.ac
scripts/: clean.sh
src/: Makefile.am  block.cc  block.h  main.cc  node.cc  node.h  transaction.h
src/proto/: client.proto  server.proto
src/util/: crypto.cc  crypto.h  net.cc  net.h
